welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  def remplir(){
    var X:Int=getWorldHeight()
    var T = new Array[Color](X)
    T(0)=getCouleurSol()
    for (i<-1 to X-1){
      avance()
      T(i)=getCouleurSol()
    }
    for (i<-0 to X-2){
      recule
    }
  }
  remplir
  gauche()
  avance()
  droite()
  for (i<-0 to getMondeLargeur-1){
    for(j <-0 to getMondeHauteur-1){
      setCouleurBrosse(T(i+litMessage()))
      baisseBrosse
      leveBrosse
      avance()
    }
  }
 
  
  
}